trybuild_tests/tests/trybuild/fail/model_pk_with_default.rs
use butane::model;

// This should fail - conflicting attributes on same field
#[model]
struct Post {
    #[pk]
    #[default(0)]
    id: i64,
    title: String,
}

fn main() {}
