trybuild_tests/tests/trybuild/fail/model_pk_with_default.stderr
error: custom attribute panicked
 --> tests/trybuild/fail/model_pk_with_default.rs:4:1
  |
4 | #[model]
  | ^^^^^^^^
  |
  = help: message: Malformed default attribute: CompilerErrorMsg { ts: TokenStream [Ident { ident: "compile_error", span: #6 bytes(79..87) }, Punct { ch: '!', spacing: Alone, span: #6 bytes(79..87) }, Group { delimiter: Parenthesis, stream: TokenStream [Literal { kind: Str, symbol: "malformed default value", suffix: None, span: #6 bytes(79..87) }], span: #6 bytes(79..87) }] }
